# s2-cli

./: CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  cliff.toml  foo.txt
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml  test.yml
src/: account.rs  basin.rs  bench.rs  cli.rs  common.rs  config.rs  error.rs  formats.rs  main.rs  ops.rs  ping.rs  record_format.rs  stream.rs  tput.rs  types.rs  updates.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/tui/screens/: mod.rs
src/tui/widgets/: mod.rs
tests/: cli.rs  e2e.rs  integration.rs
