[package]
name = "streamstore-cli"
description = "DEPRECATED: Use s2-cli instead"
version = "0.22.1"
edition = "2024"
license = "Apache-2.0"
keywords = ["streamstore", "s2", "log", "stream", "s3"]
repository = "https://github.com/s2-streamstore/streamstore-cli"
homepage = "https://github.com/s2-streamstore/streamstore-cli"

[[bin]]
name = "s2"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.6"
base64ct = { version = "1.7.3", features = ["alloc"] }
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
color-print = "0.3.7"
colored = "3.0.0"
config = "0.15.11"
dirs = "6.0.0"
futures = "0.3.31"
http = "1.3.1"
humantime = "2.2.0"
indicatif = "0.17.11"
json_to_table = "0.11.0"
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
streamstore = { version = "0.20.0", features = ["connector"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
rstest = "0.25.0"

[profile.release]
lto = true
