[package]
name = "s2-cli"
description = "CLI for S2"
version = "0.24.1"
edition = "2024"
license = "MIT"
keywords = ["s2", "durable", "streams", "client", "cli"]
repository = "https://github.com/s2-streamstore/s2-cli"
homepage = "https://github.com/s2-streamstore/s2-cli"

[[bin]]
name = "s2"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.6"
base64ct = { version = "1.7.3", features = ["alloc"] }
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
color-print = "0.3.7"
colored = "3.0.0"
config = "0.15.11"
dirs = "6.0.0"
futures = "0.3.31"
http = "1.3.1"
humantime = "2.2.0"
indicatif = "0.18.3"
json_to_table = "0.12.0"
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.1"
s2-sdk = { version = "0.22.4", features = ["_hidden"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
toml = "0.9.11"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rstest = "0.26.0"
serial_test = "3.2"
tempfile = "3.15"

[profile.release]
lto = true
