[package]
name = "s2-cli"
description = "CLI for S2"
version = "0.25.1"
edition = "2024"
license = "MIT"
keywords = ["s2", "durable", "streams", "client", "cli"]
repository = "https://github.com/s2-streamstore/s2-cli"
homepage = "https://github.com/s2-streamstore/s2-cli"

[[bin]]
name = "s2"
path = "src/main.rs"

[dependencies]
async-stream = "0.3.6"
base64ct = { version = "1.8.3", features = ["alloc"] }
bytes = "1.11.0"
chrono = "0.4"
clap = { version = "4.5.54", features = ["derive"] }
color-print = "0.3.7"
colored = "3.1.1"
config = "0.15.19"
crossterm = "0.28"
dirs = "6.0.0"
futures = "0.3.31"
http = "1.4.0"
humantime = "2.3.0"
indicatif = "0.18.3"
json_to_table = "0.12.0"
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.2"
ratatui = "0.29"
s2-sdk = { version = "0.23.0", features = ["_hidden"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["io-util"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4"] }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
rstest = "0.26.1"
serial_test = "3.3"
tempfile = "3.24"

[profile.release]
lto = true

